--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 low level programming/lab13/.vs/lab13/v17/ipch/AutoPCH/7995c94ff6d3ce23/LAB13.ipch
+low level programming/lab13-13-13/.vs/lab13-13-13/v17/ipch/AutoPCH/aa268e737284d913/LAB13-13-13.ipch
+low level programming/lab13/.vs/lab13/v17/ipch/AutoPCH/3015f31149b594f3/LAB13.ipch
